@@ -1,4 +1,5 @@
 1.7.19
+- Performance improvements for ausearch/report
 
 1.7.18
 - Update time examples in ausearch/report man pages
